--- a/index.html
+++ b/index.html
@@ -466,86 +466,95 @@
         </div>
 
         <div class="footer-wrapper">
-        <p class="wrapper-caption">Subscribe</p>
-        <form class="subscribe-form" name="subscribe">
-          <label class="subscribe-form-field">
-            <input
-            type="email"
-            placeholder="E-mail"
-            class="subscribe-form-input"
-            name="subscribe-email">
-          </label>
-          <button class="subscribe-form-button" type="submit">Subscribe
-            <svg class="subscribe-form-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-Send-icon"></use>
-            </svg>
-          </button>
-        </form>
+          <p class="wrapper-caption">Subscribe</p>
+          <form class="subscribe-form" name="subscribe">
+            <label class="subscribe-form-field">
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="subscribe-form-input"
+                name="subscribe-email"
+              />
+            </label>
+            <button class="subscribe-form-button" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Send-icon"></use>
+              </svg>
+            </button>
+          </form>
         </div>
-
       </div>
     </footer>
-<!--Modal window-->
-<div class="backdrop is-open">
-<div class="modal">
-  <button class="modal-btn" type="button" aria-label="Modal close button">
-<svg class="close-icon" width="8" height="8">
-  <use href="/images/icons.svg#icon-close-black"></use>
-</svg>
-</button>
-<p class="modal-caption">
-  Leave your contacts and we will call you back
-</p>
-<form class="form" name="modal-contacts" autocomplete="off">
-  <label for="user_name" class="form-label">
-    Name
-  </label>
-    <div class="input-icons">
-  <input id="user_name" class="form-input" type="text" name="username">
-  <svg class="form-icon" width="18" height="18">
-    <use href="./images/icons.svg#icon-person-black"></use>
-  </svg>
-  </div>
+    <!--Modal window-->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="/images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="form" name="modal-contacts" autocomplete="off">
+          <label for="user_name" class="form-label"> Name </label>
+          <div class="input-icons">
+            <input
+              id="user_name"
+              class="form-input"
+              type="text"
+              name="username"
+            />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
 
-  <label for="user-phone" class="form-label">
-    Phone
-  </label>  
-    <div class="input-icons">
-    <input id="user-phone" class="form-input" type="tel" name="user-phone">
-    <svg class="form-icon" width="18" height="24">
-      <use href="./images/icons.svg#icon-phone-black"></use>
-    </svg>
-  </div>
+          <label for="user-phone" class="form-label"> Phone </label>
+          <div class="input-icons">
+            <input
+              id="user-phone"
+              class="form-input"
+              type="tel"
+              name="user-phone"
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
 
-  <label for="user_email" class="form-label">
-    Email
-  </label>  
-    <div class="input-icons">
-      <input id="user_email" class="form-input" type="email" name="user-email">
-      <svg class="form-icon" width="18" height="24">
-        <use href="./images/icons.svg#icon-email-black"></use>
-      </svg>
+          <label for="user_email" class="form-label"> Email </label>
+          <div class="input-icons">
+            <input
+              id="user_email"
+              class="form-input"
+              type="email"
+              name="user-email"
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+
+          <label for="user-comment" class="form-label"> Comment </label>
+          <textarea
+            id="user-comment"
+            class="form-input form-comment"
+            name="user-comment"
+            rows="5"
+            placeholder="Text input"
+          ></textarea>
+        </form>
+
+        <div class="checkbox-text">
+          <input type="checkbox" name="terms-conditions" class="checkbox" />
+          I accept the terms and conditions of the
+          <span class="privacy-police">Privacy Policy</span>
+        </div>
+
+        <button type="submit" class="submit-btn">Send</button>
+      </div>
     </div>
-  
-  <label for="user-comment" class="form-label">
-    Comment
-  </label>  
-<textarea id="user-comment" class="form-input form-comment" name="user-comment" rows="5" placeholder="Text input"></textarea>
-</form>  
-
-<div class="checkbox-text">
-<input type="checkbox" name="terms-conditions" class="checkbox">
-I accept the terms and conditions of the <span class="privacy-police">Privacy Policy</span>
-</div>
-
-<button type="submit" class="submit-btn">
-  <div class="submit-btn-text">Send</div>
-</button>
-
-</div>
-</div>
-
   </body>
 </html>
-
-
