--- a/index.html
+++ b/index.html
@@ -498,53 +498,61 @@
           Leave your contacts and we will call you back
         </p>
         <form class="form" name="modal-contacts" autocomplete="off">
-          <label for="user_name" class="form-label"> Name </label>
-          <div class="input-icons">
-            <input
-              id="user_name"
-              class="form-input"
-              type="text"
-              name="username"
-            />
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
+          <div class="form-inputs">
+            <label for="user_name" class="form-label"> Name </label>
+            <div class="input-icons">
+              <input
+                id="user_name"
+                class="form-input"
+                type="text"
+                name="username"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="user-phone" class="form-label"> Phone </label>
-          <div class="input-icons">
-            <input
-              id="user-phone"
-              class="form-input"
-              type="tel"
-              name="user-phone"
-            />
-            <svg class="form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+          <div  class="form-inputs">
+            <label for="user-phone" class="form-label"> Phone </label>
+            <div class="input-icons">
+              <input
+                id="user-phone"
+                class="form-input"
+                type="tel"
+                name="user-phone"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="user_email" class="form-label"> Email </label>
-          <div class="input-icons">
-            <input
-              id="user_email"
-              class="form-input"
-              type="email"
-              name="user-email"
-            />
-            <svg class="form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email-black"></use>
-            </svg>
+          <div class="form-inputs">
+            <label for="user_email" class="form-label"> Email </label>
+            <div class="input-icons">
+              <input
+                id="user_email"
+                class="form-input"
+                type="email"
+                name="user-email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <label for="user-comment" class="form-label"> Comment </label>
-          <textarea
-            id="user-comment"
-            class="form-input form-comment"
-            name="user-comment"
-            rows="5"
-            placeholder="Text input"
-          ></textarea>
+          <div  class="form-inputs">
+            <label for="user-comment" class="form-label"> Comment </label>
+            <textarea
+              id="user-comment"
+              class="form-input form-comment"
+              name="user-comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
         </form>
 
         <div class="checkbox-text">
