--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 id="user-name"
                 class="form-input"
                 type="text"
-                name="username"
+                name="user-name"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
@@ -513,7 +513,7 @@
             </div>
           </div>
 
-          <div  class="form-inputs">
+          <div class="form-inputs">
             <label for="user-phone" class="form-label"> Phone </label>
             <div class="input-icons">
               <input
@@ -554,7 +554,6 @@
             ></textarea>
           </div>
         
-
         <div class="checkbox-text">
           <input 
           id="user-privacy"
@@ -562,15 +561,14 @@
           name="user-privacy"
           value="true"
           class="checkbox" />
-          <label>
+          <label for="user-privacy" class="user-privacy">
           I accept the terms and conditions of the
-          <span class="privacy-police">Privacy Policy</span>
+          <span class="privacy-police"><a href="">Privacy Policy</a> </span>
           </label>
         </div>
-
         <button type="submit" class="submit-btn">Send</button>
+        </form>
       </div>
     </div>
-    </form>
-  </body>
+    </body>
 </html>
