--- a/index.html
+++ b/index.html
@@ -562,8 +562,7 @@
             type="checkbox"
             name="user-privacy"
             value="false"
-            class="checkbox"
-            visually-hidden />
+            class="checkbox"/>
             <span class="form-agreement-checkbox">
              <svg class="icon-checked" height="8" width="10">
                 <use href="./images/icons.svg#icon-checked"></use>
